--- a/src/_reset.scss
+++ b/src/_reset.scss
@@ -1,3 +1,20 @@
 *, *::before, *::after {
   box-sizing: border-box;
 }
+
+html {
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+}
+
+body, h1, h2, h3, h4, p,
+figure, blockquote, dl, dd {
+  margin: 0;
+}
+
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
