--- a/src/_reset.scss
+++ b/src/_reset.scss
@@ -3,9 +3,9 @@
 }
 
 html {
-  -moz-text-size-adjust: none;
-  -webkit-text-size-adjust: none;
-  text-size-adjust: none;
+  font-size: 100%;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
 }
 
 body, h1, h2, h3, h4, p,
@@ -17,4 +17,8 @@ img,
 picture {
   max-width: 100%;
   display: block;
+}
+
+table {
+	border-collapse: collapse;
 }
